2017-10-27  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/pluginscheduler.c (plugins_scheduler_stop): New function.
	(struct plugins_scheduler): Add stopped element.

	* src/pluginscheduler.h: Add function header.

	* src/attack.c (attack_host): Call plugins_scheduler_stop() if scan is
	stopped.

2017-10-27  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* misc/plugutils.c (plug_fork_child): Remove debug messages.

2017-10-25  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* nasl/nasl_socket.c (nasl_open_privileged_socket): Set lowest_socket
	variable, to fix close() error message.

2017-10-22  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/attack.c (attack_start): Send error message to client on
	reverse-lookup failure.

2017-10-22  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/nasl_plugins.c (check_nvti): New function.
	(nasl_plugin_add): Use new function.

2017-10-15  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* nasl/nasl_smb.c (nasl_win_cmd_exec): Escape the password to not be
	interpreted by the shell.

2017-10-13  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* COPYING: Remove internal_com.h entry.

	* misc/internal_com.h: Remove file.

	* misc/network.c (internal_send, internal_recv): Remove message type
	handling.

	* misc/network.h: Adjust function headers.

	* misc/plugutils.c (plug_get_host_fqdn, proto_post_wrapped)
	(plug_get_key): Adjust function calls.
	(plug_fork_child): Send results through global_socket directly.

	* nasl/nasl_builtin_find_service.c (fwd_data), src/attack.c
	(comm_send_status, attack_host), src/hosts.c (forward),
	src/nasl_plugins.c (nasl_thread), src/ntp.c (__ntp_timestamp_scan_host),
	src/pluginlaunch.c (update_running_processes): Adjust function calls.

2017-10-13  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/pluginlaunch.c (plugin_launch): Adjust to set child processes to
	send scan results directly to main scan process instead of passing them